# VitaCast

./: .gitignore  CHANGELOG.md  CMakeLists.txt  COMO_CREAR_RELEASE.txt  COMPILACION_IMPOSIBLE.md  COMPILAR_EN_WSL.md  DEBUG_SUMMARY.md  DIAGNOSTICO_COMPLETO.sh  FIX_0x8010113D.md  FIX_ERROR_3D.md  FIX_ERROR_LIBRERIAS.md  FORZAR_ACTUALIZACION.sh  GITHUB_ACTIONS_SETUP.md  GUIA_COMPILACION_WINDOWS.md  GUIA_COMPILACION_WSL.md  GUIA_WINDOWS_ACTUALIZADA.md  INSTALAR_VITA2D.md  INSTRUCCIONES_COMPILACION.md  INSTRUCCIONES_COMPILACION_WSL.txt  LIMPIEZA_COMPLETA.sh  MEJORAS_VITASDK.md  Makefile  Makefile_complete  Makefile_complete_minimal  Makefile_functional  Makefile_minimal  Makefile_simple  Makefile_simple_fix  Makefile_test  Makefile_working  PROBAR_SIN_ATRAC_APPLE.md  README.md  RELEASES_STATUS.md  RELEASE_CHECKSUMS.txt  RELEASE_FILES.txt  RELEASE_NOTES.md  RELEASE_NOTES.txt  RESUMEN_CAMBIOS.md  RESUMEN_FINAL.md  SOLUCION_DEFINITIVA.md  (+34 more)
.deps/: env.sh  vitasdk_latest.json  vitasdk_packages_latest.json
.deps/vitasdk/: version_info.txt
.deps/vitasdk/arm-vita-eabi/include/: newlib.h  pnglibconf.h  pte_types.h  pthread.h  sched.h  vita2d_vgl.h
.deps/vitasdk/arm-vita-eabi/include/bits/: posix_opt.h
.deps/vitasdk/arm-vita-eabi/include/c++/10.3.0/arm-vita-eabi/bits/: c++config.h
.deps/vitasdk/arm-vita-eabi/lib/: libpng16.la  libstdc++.a-gdb.py
.deps/vitasdk/arm-vita-eabi/lib/cmake/CURL/: CURLConfig.cmake  CURLTargets.cmake
.deps/vitasdk/arm-vita-eabi/lib/cmake/freetype/: freetype-config.cmake
.deps/vitasdk/arm-vita-eabi/lib/ldscripts/: armelf.x  armelf.xbn  armelf.xc  armelf.xce  armelf.xd  armelf.xdc  armelf.xdce  armelf.xde  armelf.xdw  armelf.xdwe  armelf.xe  armelf.xn  armelf.xr  armelf.xs  armelf.xsc  armelf.xsce  armelf.xse  armelf.xsw  armelf.xswe  armelf.xu  armelf.xw  armelf.xwe
.deps/vitasdk/arm-vita-eabi/lib/pkgconfig/: freetype2.pc  libcurl.pc  libpng16.pc  zlib.pc
.deps/vitasdk/etc/vdpm/: packages.list
.deps/vitasdk/lib/: libcc1.so.0.0.0
.deps/vitasdk/lib/gcc/arm-vita-eabi/10.3.0/: collect2  liblto_plugin.so.0.0.0  lto-wrapper
.deps/vitasdk/lib/gcc/arm-vita-eabi/10.3.0/install-tools/: fixincl  mkheaders  mkheaders.conf
.deps/vitasdk/lib/gcc/arm-vita-eabi/10.3.0/plugin/: gengtype  gtype.state  libcc1plugin.so.0.0.0  libcp1plugin.so.0.0.0
.deps/vitasdk/lib/gcc/arm-vita-eabi/10.3.0/plugin/include/: auto-host.h  configargs.h  options.h  tm-preds.h
.deps/vitasdk/lib/gcc/arm-vita-eabi/10.3.0/plugin/include/config/arm/: arm.h
.github/: GITHUB_ACTIONS_GUIDE.md  QUICK_START.md  README.md
.github/workflows/: build-and-release.yml  build-dev.yml  build-vpk.yml  build.yml  release.yml
_assets_tmp/sce_sys/: param.sfo
_vpk_build/sce_sys/: param.sfo
apple/: apple_sync.c  apple_sync.h
audio/: atrac_decoder.c  atrac_decoder.h  audio_player.c  audio_player.h
network/: network_manager.c  network_manager.h
sce_sys/: param.sfo
sce_sys/livearea/contents/: template.xml
temp_vpk_complete_final/sce_sys/: param.sfo
ui/: ui_manager.c  ui_manager.h
